[package]
name = "builder-rs"
version = "0.1.0"
edition = "2021"
authors = ["Vlad-Sebastian Cretu <vlad.sebastian.cretu.dev@gmail.com>"]
description = "A procedural macro for generating builder patterns for Rust structs."
license-file = "LICENSE"
repository = "https://github.com/yourlogarithm/builder-rs"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = "2.0.52"

[dev-dependencies]
trybuild = "1.0.89"
